# hexabyte

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yml  lint.yml  pre-release.yml  publish.yml  release.yml  test-publish.yml  test.yml
docs/: README.md  index.md
docs/source/: conf.py  hexabyte.assets.rst  hexabyte.components.rst  hexabyte.constants.rst  hexabyte.events.rst  hexabyte.models.data_sources.rst  hexabyte.models.rst  hexabyte.rst  hexabyte.utils.rst  hexabyte.widgets.rst  index.rst  modules.rst
hexabyte/: __init__.py  __main__.py  api.py  app_mode.py  command_parser.py  commands.py  config.py  constants.py  context.py  cursor.py  data_model.py  data_source.py  data_types.py  entropy.py  hexabyte_app.css  hexabyte_app.py  modes.py  plugins.py
hexabyte/actions/: __init__.py  _action.py  action_handler.py  goto_action.py  redo_action.py  save_action.py  save_as_action.py  undo_action.py
hexabyte/actions/api/: __init__.py  _api_action.py  clear.py  delete.py  find.py  goto.py  highlight.py  insert.py  move.py  open.py  redo.py  replace.py  revert.py  save.py  save_as.py  select.py  set.py  undo.py  unhighlight.py
hexabyte/actions/app/: __init__.py  _app_action.py  exit.py
hexabyte/actions/command_prompt/: __init__.py
hexabyte/actions/editor/: __init__.py  _editor_action.py  clear.py  delete.py  find.py  goto.py  highlight.py  insert.py  move.py  open.py  redo.py  replace.py  revert.py  save.py  save_as.py  select.py  set.py  undo.py  unhighlight.py  unselect.py
hexabyte/actions/model/: __init__.py  _model_action.py  clear.py  delete.py  find.py  goto.py  highlight.py  insert.py  move.py  open.py  redo.py  replace.py  revert.py  save.py  save_as.py  select.py  set.py  undo.py  unhighlight.py
hexabyte/assets/: __init__.py  config.toml
hexabyte/commands/: __init__.py  command.py  command_parser.py  decorators.py
hexabyte/components/: __init__.py  byte_view.py  hc_view.py
hexabyte/constants/: __init__.py  enums.py  generic.py  modes.py  sizes.py
hexabyte/data_model/: __init__.py
hexabyte/data_sources/: _data_source.py  paged_data_source.py  simple_data_source.py
hexabyte/events/: __init__.py  action.py  action_handler.py  commands.py
hexabyte/models/: __init__.py  cursor.py  data_model.py
hexabyte/models/data_sources/: __init__.py  _data_source.py  data_block.py  paged_data_source.py  simple_data_source.py
hexabyte/plugins/: __init__.py  _loader.py
hexabyte/plugins/entropy/: __init__.py  entropy.py
hexabyte/plugins/entropy/widgets/: __init__.py  entropy_panel.py
hexabyte/plugins/info/: __init__.py
hexabyte/plugins/info/widgets/: __init__.py  info_panel.py
hexabyte/transformers/: __init__.py  ascii.py  binary.py  hex.py  transformed_data.py  transformer.py
hexabyte/utils/: __init__.py  config.py  cursor.py  data_manipulation.py  data_types.py  entropy.py  misc.py
hexabyte/view_components/: __init__.py  byte_view.py  hc_view.py
hexabyte/views/: __init__.py  byte_view.py
hexabyte/widgets/: __init__.py  column_view.py  command_prompt.py  editor.py  entropy_panel.py  help_screen.py  info_panel.py  sidebar.py  sidebar_panel.py  workbench.py
hexabyte/workbench/: __init__.py  editor.py  info_panel.py  sidebar.py  workbench.py
search/: search_index.json
tests/: __init__.py  test_contants.py  test_data_model.py
tests/constants/: __init__.py  test_sizes.py
tests/data/: 1K.data  1M.data  32K.data  4K.data  __init__.py  hello_world.c  hello_world_aarch64  hello_world_x86-64
tests/data_model/: __init__.py
tests/data_sources/: test_simple_data_source.py
tests/models/: __init__.py
tests/models/data_sources/: test_simple_data_source.py
tests/plugins/: __init__.py
tests/plugins/entropy/: __init__.py  test_entropy.py
tests/utils/: __init__.py  test_context.py  test_cursor.py  test_data_types.py  test_misc.py
