[tool.poetry]
name        = "hexabyte"
version     = "0.1.0"
description = ""
authors     = ["Justin C <justin@thetacom.info>"]
readme      = "README.md"
packages    = [{ include = 'hexabyte' }]

[tool.poetry.dependencies]
python  = "^3.10"
click   = "^8.1.3"
urwid   = "^2.1.2"
textual = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pylint      = "^2.15.3"
mypy        = "^0.982"
pydocstyle  = "^6.1.1"
black       = { version = "^22.8.0", allow-prereleases = true }
bandit      = "^1.7.4"
pycodestyle = "^2.9.1"
pytest      = "^7.1.3"
pytest-cov  = "^4.0.0"
pre-commit  = "^2.20.0"
ipykernel   = "^6.16.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hexabyte = "hexabyte.__main__:main"

[tool.coverage.run]
source = ['hexabyte']

[tool.pytest.ini_options]
minversion = "7.1"
addopts    = "-ra --doctest-modules --cov --cov-branch --cov-report term-missing"
testpaths  = ["tests"]
